MEC Dev Sandbox/MEC Dev Sandbox/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anniversary_Date__c</fullName>
        <inlineHelpText>This can be used to store wedding anniversary, an anniversary of doing business together, or any other annually noteworthy date.</inlineHelpText>
        <label>Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_1__c</fullName>
        <label>Area 1</label>
        <picklist>
            <picklistValues>
                <fullName>Province</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_2__c</fullName>
        <label>Area 2</label>
        <picklist>
            <picklistValues>
                <fullName>Uptown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downtown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_3__c</fullName>
        <label>Area 3</label>
        <picklist>
            <picklistValues>
                <fullName>Jed 01 : (All areas after Royal Terminal).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 02 : (Al Mohamadiah, Al Nayem &amp; Al Nahda).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 03 : (Al Nozha).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 04 : (Al Salama ,Al Zahra , Al Shatie,Al Rawda &amp; Al Khaledia).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 05 : (Al Safa , Al Marwa, Al Bawadi &amp; Al Faisaliah).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 06 : (Al Rehab , Al Azizia &amp; Mushrefa).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 07 : (Al Hamra , Al Andalus &amp; Al Rowais).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 08 : (Al Naseem , Bani Malik, Al Wrood &amp; Al Sharafia).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 09 : (Eastern Bogdadiah, Al Kandara, Al Suhaifa &amp; Al Amariah).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 10 : (Al Balad &amp; Western Bogdadia).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 11 : (Al Sabeel &amp; Al Hendawiah).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 12 : (Al Sulimaniah &amp; Al Fayha).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 13 : (Al Jamea, Al Thagher, Bin Ladin &amp; Al Wazeeria).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 14 : (Al Nuzlah, Madaen Al Fahad).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jed 15 : (Al Mahgar, Haraj , Al Senaya &amp; Al Khomra).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 01 : Khobar Downtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 02 : Khobar Uptown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 03 : Dammam Downtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 04 : Dammam Khazan St.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 05 : Dammam Uptown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 06 : Jubail Downtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 07 : Jubail Uptown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 08 : Hassa Downtown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 09 : Hassa Uptown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 10 : Hassa Qatar Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kbr 11 : Qatif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryd 01: Olaya, Sulimania &amp; Al Mursalat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryd 02: Batha and Murabba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryd 03: Naseem and Nadeem Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryd 04: Badiya, Shifa and Swaidi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>Visual Merchandising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replenishment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HiFi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Handset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Washing Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refrigerators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking Range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Appliance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DivisionDepartment__c</fullName>
        <label>Division / Department</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing / Visual Merchandising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management-Support / Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management-Support / Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management-Support / Logistic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management-Support / Replenishment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management-Support / Data Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management-Support / Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAV / TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAV / HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAV / HiFi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAV / PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAV / PIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAV / PVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAV / BNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAV / RME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAV / ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile / Handset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile / Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming / Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming / Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming / Accessoires</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming / Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT / Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT / Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT / Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Goods / AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Goods / Washing Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Goods / Refrigerators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Goods / Cooking Range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Goods / Small Appliance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management- Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Working_day__c</fullName>
        <label>End Working day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GPS_Location__c</fullName>
        <label>GPS Location</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MEC_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This field will be removed after importing the contacts, used to manage the import from excel</inlineHelpText>
        <label>MEC ID</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MEC_Person_Incharge2__c</fullName>
        <inlineHelpText>As per the CRM import File</inlineHelpText>
        <label>MEC Person Incharge 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MEC_Person_Incharge__c</fullName>
        <formula>Account.Owner.FirstName  &amp; &apos; &apos;  &amp;  Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Owner</inlineHelpText>
        <label>MEC Person Incharge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_2__c</fullName>
        <label>Mobile 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_3__c</fullName>
        <label>Mobile 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_3__c</fullName>
        <label>Phone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <inlineHelpText>Work Function (Position)</inlineHelpText>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Category__c</fullName>
        <label>Products Category</label>
        <picklist>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi-Fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Products_Sub_Category__c</fullName>
        <label>Products Sub-Category</label>
        <picklist>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi-Fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eloc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RFPO_contact__c</fullName>
        <label>RFPO contact</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Full_Name__c</fullName>
        <label>SAP Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Category__c</fullName>
        <label>Sales Category</label>
        <picklist>
            <picklistValues>
                <fullName>Category 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category 7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <globalPicklist>Sales_Org</globalPicklist>
        <label>Sales Org</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Products_Category__c</fullName>
        <description>Products Categories For Sales People</description>
        <formula>IF(
  ISPICKVAL(Sales_Category__c, &quot;Category 1&quot;), 
IF(INCLUDES( Account.Category_1__c , &quot;TV&quot;), &quot;TV, &quot; , NULL) + 
IF(INCLUDES( Account.Category_1__c , &quot;IT&quot;), &quot;IT, &quot; , NULL) + 
IF(INCLUDES( Account.Category_1__c , &quot;HV&quot;), &quot;HV, &quot; , NULL)
, 
IF(
  ISPICKVAL(Sales_Category__c, &quot;Category 2&quot;), 
IF(INCLUDES( Account.Category_2__c , &quot;TV&quot;), &quot;TV, &quot; , NULL) + 
IF(INCLUDES( Account.Category_2__c , &quot;IT&quot;), &quot;IT, &quot; , NULL) + 
IF(INCLUDES( Account.Category_2__c , &quot;HV&quot;), &quot;HV, &quot; , NULL)
, NULL)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Products Categories For Sales People</inlineHelpText>
        <label>Sales Products Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Anniversary_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is part of the Birthday Emailer AppExchange package.</description>
        <inlineHelpText>Check this field if you wish to send an anniversary email to this contact, using the Anniversary Email email template.</inlineHelpText>
        <label>Send Anniversary Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Birthday_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is related to the Birthday Emailer AppExchange package</description>
        <inlineHelpText>Check this field to enable an automated birthday email to be sent to this contact, using the &quot;Birthday Email&quot; email template.</inlineHelpText>
        <label>Send Birthday Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Ending_Working_Hours_Friday__c</fullName>
        <label>Start/Ending Working Hours(Friday)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Ending_Working_Hours_Normal_days__c</fullName>
        <label>Start/Ending Working Hours(Normal days)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Working_day__c</fullName>
        <label>Start Working day</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_GPS_Location__c</fullName>
        <label>Store GPS Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Area__c</fullName>
        <label>Sub Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Upload_Info__c</fullName>
        <description>To identify the upload batch, this is internal and hidden info</description>
        <inlineHelpText>To identify upload batch, this is internal and hidden</inlineHelpText>
        <label>Upload Info</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wedding_Anniversary_Date__c</fullName>
        <label>Wedding Anniversary Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Email_del__c</fullName>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Area_1__c</columns>
        <columns>Area_2__c</columns>
        <columns>Area_3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>POS</fullName>
        <active>true</active>
        <description>Point Of Sales</description>
        <label>POS</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>